syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message DeleteDeviceRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
}
